--- a/kompleteringar_Anna_Husman/kompleteringar_Anna_Husman.csproj
+++ b/kompleteringar_Anna_Husman/kompleteringar_Anna_Husman.csproj
@@ -42,8 +42,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Character.cs" />
+    <Compile Include="Fireball.cs" />
+    <Compile Include="Klass.cs" />
+    <Compile Include="Knight.cs" />
+    <Compile Include="Magical.cs" />
+    <Compile Include="Physical.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Spell.cs" />
+    <Compile Include="Thunder.cs" />
+    <Compile Include="Wizard.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
