--- a/kompleteringar_Anna_Husman/kompleteringar_Anna_Husman.csproj
+++ b/kompleteringar_Anna_Husman/kompleteringar_Anna_Husman.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Chainsaw.cs" />
     <Compile Include="Character.cs" />
     <Compile Include="Fireball.cs" />
     <Compile Include="Klass.cs" />
@@ -50,6 +51,8 @@
     <Compile Include="Physical.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Skill.cs" />
+    <Compile Include="Spear.cs" />
     <Compile Include="Spell.cs" />
     <Compile Include="Thunder.cs" />
     <Compile Include="Wizard.cs" />
