hee hoo sämsta spelet men visar klasser iaf

--- a/kompleteringar_Anna_Husman/kompleteringar_Anna_Husman.csproj
+++ b/kompleteringar_Anna_Husman/kompleteringar_Anna_Husman.csproj
@@ -42,8 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Chainsaw.cs" />
     <Compile Include="Character.cs" />
+    <Compile Include="CloseCombat.cs" />
     <Compile Include="Fireball.cs" />
     <Compile Include="Klass.cs" />
     <Compile Include="Knight.cs" />
